# Gaius

./: README.md  main.py  pyproject.toml  test.py
app/: config.py  main.py
app/adapters/mapping/: signal_mapper.py
app/adapters/signals/: docker_provider.py  log_provider.py
app/agent/: aiops_agent.py  chat_agent.py
app/agents/: chat_agent.py
app/api/: __init__.py  aiops.py  chat.py  diagnosis.py  health.py
app/core/: context_builder.py  decision.py  incident_engine.py  llm.py  llm_reasoner.py  log_context_builder.py  observation_builder.py  output_formatter.py  reasoner.py
app/domain/: incident.py  observation.py  observation_bundle.py  output.py  signal.py
app/models/: diagnosis.py  request.py  response.py
app/services/: aiops_service.py  chat_service.py  coordinator_service.py  diagnosis_service.py
app/tools/: __init__.py  registry.py  time_tool.py
docs/: adapter-architecture.md  architecture.md  domain-model.md  hardcode-review-notes.md  incident-model.md  output-contract.md  runbook-model.md  signal-schema.md
